# High_Performance_Computing_Assignment

./: LICENSE.txt  README.md
exercise1/: README.md
exercise1/Solution/: README.md
exercise1/Solution/Compile_OSU/: compilation_EPYC.sh
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/autom4te.cache/: requests
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/blocking/: osu_allgather  osu_allgatherv  osu_allreduce  osu_alltoall  osu_alltoallv  osu_barrier  osu_gatherv  osu_reduce  osu_scatter  osu_scatterv
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/neighborhood/: Makefile  osu_ineighbor_allgatherv  osu_ineighbor_alltoallv  osu_ineighbor_alltoallw  osu_neighbor_allgather  osu_neighbor_allgatherv  osu_neighbor_alltoall  osu_neighbor_alltoallv  osu_neighbor_alltoallw
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/non_blocking/: Makefile  osu_iallgather  osu_ialltoallv  osu_ialltoallw  osu_igather  osu_ireduce  osu_iscatter
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/persistent/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/one-sided/: Makefile  osu_cas_latency  osu_fop_latency  osu_get_acc_latency  osu_get_bw  osu_put_bibw  osu_put_latency
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/pt2pt/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/pt2pt/persistent/: Makefile  osu_bibw_persistent  osu_bw_persistent  osu_latency_persistent
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/pt2pt/standard/: Makefile  osu_latency  osu_latency_mp  osu_multi_lat
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/startup/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/upc/: Makefile
exercise1/Solution/Compile_OSU/osu-micro-benchmarks-7.3/c/upcxx/: Makefile
exercise1/Solution/barrier/: barrier_bruck.sh  barrier_data_analysis.ipynb  barrier_default.sh  barrier_doublering.sh  barrier_linear.sh  barrier_tree.sh
exercise1/Solution/barrier/Results/: barrier_bruck.csv  barrier_default.csv  barrier_doublering.csv  barrier_linear.csv  barrier_tree.csv
exercise1/Solution/bcast/: bcast_basiclinear.sh  bcast_binarytree.sh  bcast_chain.sh  bcast_data_analysis.ipynb  bcast_default.sh
exercise1/Solution/bcast/Results/: bcast_basiclinear.csv  bcast_binarytree.csv  bcast_chain.csv  bcast_default.csv
exercise1/Solution1/Compile_OSU/: compilation.out  compilation.sh
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/: config.status  libtool
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/: Makefile
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/: Makefile
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/blocking/: Makefile  osu_alltoallw  osu_bcast  osu_gather  osu_reduce_scatter
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/neighborhood/: osu_ineighbor_allgather  osu_ineighbor_alltoall
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/collective/non_blocking/: osu_iallgatherv  osu_iallreduce  osu_ialltoall  osu_ibarrier  osu_ibcast  osu_igatherv  osu_ireduce_scatter  osu_iscatterv
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/one-sided/: osu_acc_latency  osu_get_latency  osu_put_bw
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/pt2pt/standard/: osu_bibw  osu_bw  osu_latency_mt  osu_mbw_mr
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/mpi/startup/: osu_hello  osu_init
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/openshmem/: Makefile
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/xccl/: Makefile
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/xccl/collective/: Makefile
exercise1/Solution1/Compile_OSU/osu-micro-benchmarks-7.3/c/xccl/pt2pt/: Makefile
exercise2/: README.md
exercise2/Solution/: CMakeLists.txt  README.md  build.sh  ex2C_scaling_analysis.ipynb  mandelbrot.pgm  mpi_scaling.sh  mpi_strongscaling.sh  mpi_weakscaling.sh  omp_scaling.sh  omp_strongscaling.sh  omp_weakscaling.sh  serial.sh  slurm-386881.out  test.c
exercise2/Solution/Results/: mpi_scaling_mandelbrot.csv  mpi_scaling_mandelbrot_1000x1000x65535_core_norobin.csv  mpi_scaling_mandelbrot_3000x3000x3000_core.csv  mpi_strongscaling_1000x1000x65535_core_robin.csv  mpi_strongscaling_1000x1000x65535_socket_robin.csv  mpi_weakscaling_sizex1000x65535_core_robin.csv  omp_scaling_mandelbrot.csv  omp_scaling_mandelbrot_1000x1000x65535_close_cores.csv  omp_scaling_mandelbrot_1000x1000x65535_close_cores_col.csv  omp_scaling_mandelbrot_3000x3000x3000_close_cores.csv  omp_scaling_mandelbrot_3000x3000x3000_spread_cores.csv  omp_strongscaling_1000x1000x65535_close_cores_static_robin.csv  omp_strongscaling_1000x1000x65535_spread_cores_dynamic_robin.csv  serial_100x1000x65535_robin.csv  serial_mandelbrot_1000x1000x65535.csv  serial_mandelbrot_3000x3000x3000.csv
exercise2/Solution/apps/: CMakeLists.txt  main.c  serial.sh
exercise2/Solution/include/: mandelbrot.h
exercise2/Solution/src/: CMakeLists.txt  mandelbrot.c
